--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tabler/icons": "^3.31.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.2",
-    "tailwindcss": "^4.0.14"
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.0.14",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
