--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "astro": "^5.7.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
