--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.9",
-    "tailwind-variants": "^1.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6"
   },
