--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.9",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^2.1.0",
+    "tailwind-variants": "2.0.1",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6"
   },
