--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.4",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "2.0.1",
+    "tailwind-variants": "^3.1.0",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7"
   },
